# cxo-council

./: .gitignore  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml
cloudflare/: .gitignore  QUICKSTART.md  README.md  deploy.sh
cloudflare/examples/: cli-example.sh  client-sdk.ts  test-request.json
cloudflare/shared/: council.ts  llm-client.ts  prompts.ts  types.ts
cloudflare/workers/consumer/: package.json  tsconfig.json  wrangler.toml
cloudflare/workers/consumer/src/: index.ts
cloudflare/workers/ingress/: package.json  wrangler.toml
cloudflare/workers/ingress/src/: index.ts
cxo_council/: __init__.py  cli.py  council.py  llm_client.py  prompts.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md
examples/: example-config.jsonc  example-plan.md
